# resource-manager

./: .project  README.md  Readme.rst  setup.cfg
src/resource_manager/: __init__.py  logger.py  resource_manager.py  todo
src/resource_manager/tests/: test_directory_and_file.py  test_directory_object.py  test_file_object.py  test_resource_manager.py
