[metadata]
name = resource-manager
version = 1.0.0
summary = This module is designed for fast and convenient process of control/spec files of packages.
description-file =
    Readme.rst
author =
    Daniil Trishkin
author-email =
    asteroid566@gmail.com
classifier =
    Environment :: Tools
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages_root = src
packages =
    resource_manager
modules =
    resource_manager.resource_manager
    resource_manager.logger

[wheel]
universal = 1
